# mc-FAST

./: .gitignore  README.md  hatch_build.py  pyproject.toml  setup.py
FAST/: compile.py  compile.sh  reparameter.py  test.py  test_all.py  train.py  visualize.py
FAST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
FAST/config/fast/ic15/: fast_base_ic15_1280_finetune_ic17mlt.py
FAST/config/fast/tt/: fast_base_tt_640_finetune_ic17mlt.py  fast_base_tt_800_finetune_ic17mlt.py
FAST/fast_dataset/: builder.py
FAST/fast_dataset/fast/: fast_ctw.py  fast_ic15.py  fast_ic17mlt.py  fast_msra.py  fast_synth.py  fast_tt.py
FAST/fast_dataset/pan/: pan_ctw.py  pan_ic15.py  pan_msra.py  pan_synth.py  pan_tt.py
FAST/models/: builder.py
FAST/models/backbone/: builder.py  textnet.py
FAST/models/head/: builder.py  fast_head.py
FAST/models/loss/: builder.py
FAST/models/neck/: builder.py  fast_neck.py
FAST/models/post_processing/ccl/: __init__.py
FAST/models/post_processing/pa/: pa.cpp
FAST/models/post_processing/pse/: pse.cpp
FAST/models/utils/: generate_bbox.py
FAST/utils/: module.py
