[project]
name = "FAST"
version = "0.1.0"
description = "MediaCatch's modulified version of https://github.com/czczup/FAST"
readme = "FAST/README.md"
keywords = ["fast", "performance", "module"]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "scipy",
    "torch",
    "torchvision",
    "editdistance",
    "Polygon3",
    "pyclipper",
    "Cython",
    "mmcv-full",
    "prefetch_generator",
    "yacs",
    "tqdm",
    "opencv-python",
    "dataset",
    "numpy>2",

]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"FAST" = ["*.sh", "*.pyx", "*.pyc"]
